# sqlalchemy-timescaledb

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
sqlalchemy_timescaledb/: __init__.py  dialect.py  functions.py
tests/: alembic.ini  conftest.py  factories.py  models.py  test_alembic.py  test_ddl_compiler.py  test_functions.py  test_hypertable.py
tests/async/: conftest.py  test_hypertable.py
tests/migrations/: env.py
